work update dec22

--- a/content/.obsidian/app.json
+++ b/content/.obsidian/app.json
@@ -4,5 +4,8 @@
   "attachmentFolderPath": "/Assets",
   "showUnsupportedFiles": true,
   "useMarkdownLinks": false,
-  "propertiesInDocument": "visible"
+  "propertiesInDocument": "visible",
+  "useTab": true,
+  "tabSize": 4,
+  "smartIndentList": true
 }
